fixed errors post W3C validator

--- a/aesthetic.html
+++ b/aesthetic.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
         <ul class="nav justify-content-center navbar">
@@ -19,7 +19,7 @@
                 <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <img id="jklogo" src="images/jklogo.png" alt="JK logo"></img>
+                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Domains</a>
@@ -42,17 +42,19 @@
         <div class="container-fluid main">
             <div class="centra">
                 <p>I was intrigued by the sounds created by my older sister who was learning the violin when I was only five. My parents acquiesce to my request for lesson to make music that was just as beautiful and melodius. Truth be told, mom said she had to suffer through some nail screeching phase in the begining. I persevered alongside my violin teacher and mom; learning to manage exam stress and picked up two distinction award along the way! Johann Sebastian Bach inspires me in my musical journey. He is, in my opinion, the best composer ever lived who crafted two of my favourite musical pieces:</p>
-                    <ul>Sinfonia in D major BWV 789</ul>
-                    <ul>Prelude in C major BWV 846</ul>
+                    <ul>
+                        <li>Sinfonia in D major BWV 789</li>
+                        <li>Prelude in C major BWV 846</li>
+                    </ul>
                 <div class="row">
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m17.jpg" alt="Christmas Recital"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m17.jpg" alt="Christmas Recital">
                     </div>
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m19.jpg" alt="Year End Recital"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/aesthetic/m19.jpg" alt="Year End Recital">
                     </div>
                     <div class="col">
-                        <video class="mx-auto d-block vids" width="250" controls alt="2020: Duet with Teacher Teresa">
+                        <video class="mx-auto d-block vids" width="250" controls>
                             <source src="videos/g3.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -81,31 +83,31 @@
             <div class="row">
                 <div class="col">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
                     </a>
                 </div>
                 <div class="col">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
                     </a>
                 </div>
                 <div class="col">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK"></img>
+                        <img class="icon" src="images/jklogo.png" alt="I am JK">
                     </a>
                 </div>
                 <div class="col">
                     <a href="cognitive.html#coding">
-                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <img class="icon" src="images/icons/code.png" alt="Coding">
                     </a>
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <img class="icon" src="images/icons/violin.png" alt="Music">
                     </a>
                 </div>
             </div>
         </div>
+    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
-    <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
