fixed errors post WC3 validator

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,31 +13,31 @@
     </head>
     <body>
         <nav class="nav justify-content-center navbar">
-            <img id="jklogo" src="images/jklogo.png" alt="JK logo"></img>
+            <img id="jklogo" src="images/jklogo.png" alt="JK logo">
         </nav>
         <div class="container-fluid domain">
             <div class="row">
                 <div class="col">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
                         <br>Olympian
                     </a>
                 </div>
                 <div class="col">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
                         <br>Spartan
                     </a>
                 </div>
                 <div class="col">
                     <a href="cognitive.html#coding">
-                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <img class="icon" src="images/icons/code.png" alt="Coding">
                         <br>Coder
                     </a>
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <img class="icon" src="images/icons/violin.png" alt="Music">
                         <br>Violinist
                     </a>
                 </div>
@@ -48,7 +48,7 @@
                 <h1 class="topper display-1">Who Am I?</h1>
                 <blockquote class="blockquote text-center quotes">
                     <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
-                    <footer class="blockquote-footer footer"><em> Aristotle</em></footter>
+                    <footer class="blockquote-footer footer"><em> Aristotle</em></footer>
                 </blockquote>
             </div>
         </div>
@@ -59,90 +59,44 @@
         <div class="container-fluid main">
             <div class="centra">
                 <h6 style="font-weight:800;">Year 2020</h6>
-                    <ul>MOE Edusave Certificate of Academic Achievements
-                    <br>Primary 5
-                    </ul>
-                    <ul>Top in English (Primary 5)
-                    <br>Singapore Primary School
-                    </ul>
-                    <ul>Bronze Award Middle Division - Grade 05
-                    <br>Singapore International Math Olympiad Challenge (SIMOC)
-                    </ul>
-                    <ul>Bronze Award 
-                    <br>Annual Mathlympics
-                    </ul>
-                    <ul>Silver Award Grade 05 Division
-                    <br>Singapore and Asian Schools Math Olympiad (SASMO)
-                    </ul>
-                    <ul>SIlver Award Grade 05
-                    <br>Singapore Math Kangaroo Contest 
-                    </ul>
-                    <ul>Credit Middle Division - Year 5
-                    <br>Australian Mathematics Competition
+                    <ul>
+                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 5</li>
+                        <li>Top in English (Primary 5)<br>Singapore Primary School</li>
+                        <li>Bronze Award Middle Division - Grade 05<br>Singapore International Math Olympiad Challenge (SIMOC)</li>
+                        <li>Bronze Award<br>Annual Mathlympics</li>
+                        <li>Silver Award Grade 05 Division<br>Singapore and Asian Schools Math Olympiad (SASMO)</li>
+                        <li>SIlver Award Grade 05<br>Singapore Math Kangaroo Contest</li>
+                        <li>Credit Middle Division - Year 5<br>Australian Mathematics Competition</li>                 
                     </ul>
                     <hr>
                 <h6 style="font-weight:800;">Year 2019</h6>
-                    <ul>MOE Edusave EAGLES Award
-                    <br>Primary 4
-                    </ul>
-                    <ul>MOE Edusave Certificate of Academic Achievements
-                    <br>Primary 4
-                    </ul>
-                    <ul>Honorable Mention
-                    <br>National Mathematical Olympiad of Singapore (NMOS)
-                    </ul>
-                    <ul>Certificate of Participation
-                    <br>Annual Mathlympics
-                    </ul>
-                    <ul>Certificate of Participation Grade 04 Division
-                    <br>Singapore and Asian Schools Math Olympiad (SASMO)
-                    </ul>
-                    <ul>Bronze Award Grade 04
-                    <br>Singapore Math Kangaroo Contest 
-                    </ul>
-                    <ul>Credit Middle Division - Year 4
-                    <br>Australian Mathematics Competition
-                    </ul>
-                    <ul>Distinction ABRSM Level 1 Award
-                    <br>Grade 02 Violin
-                    </ul>
-                    <ul>Certificate of Completion
-                    <br>TSR Backstroke Competency Programme
+                    <ul>
+                        <li>MOE Edusave EAGLES Award<br>Primary 4</li>
+                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 4</li>
+                        <li>Honorable Mention<br>National Mathematical Olympiad of Singapore (NMOS)</li>
+                        <li>Certificate of Participation<br>Annual Mathlympics</li>
+                        <li>Certificate of Participation Grade 04 Division<br>Singapore and Asian Schools Math Olympiad (SASMO)</li>
+                        <li>Bronze Award Grade 04<br>Singapore Math Kangaroo Contest</li>
+                        <li>Credit Middle Division - Year 4<br>Australian Mathematics Competition</li>
+                        <li>Distinction ABRSM Level 1 Award<br>Grade 02 Violin</li>
+                        <li>Certificate of Completion<br>TSR Backstroke Competency Programme
                     </ul>
                     <hr>
                 <h6 style="font-weight:800;">Year 2018</h6>
-                    <ul>CDC-CCC Education Merit Award
-                    <br>Primary 3
+                    <ul>
+                        <li>CDC-CCC Education Merit Award<br>Primary 3</li>
+                        <li>MOE Edusave Certificate of Academic Achievements<br>Primary 3</li>
+                        <li>Certificate of Achievement<br>RippleUX National Coding &amp; Robotic Competition</li>
+                        <li>Credit Middle Division - Year 3<br>Australian Mathematics Competition</li>
+                        <li>Model Pupil Award - Primary 3<br>Singapore Primary School</li>
+                        <li>Certificate of Completion<br>TSR Breaststroke Competency Programme</li>
+                        <li>Certificate of Paticipation<br>Introduction to Basic Meditation</li>
                     </ul>
-                    <ul>MOE Edusave Certificate of Academic Achievements
-                    <br>Primary 3
-                    </ul>
-                    <ul>Certificate of Achievement
-                    <br>RippleUX National Coding & Robotic Competition
-                    </ul>
-                    <ul>Credit Middle Division - Year 3
-                    <br>Australian Mathematics Competition
-                    </ul>
-                    <ul>Model Pupil Award - Primary 3
-                    <br>Singapore Primary School
-                    </ul>
-                    <ul>Certificate of Completion
-                    <br>TSR Breaststroke Competency Programme
-                    </ul>
-                    <ul>Certificate of Paticipation
-                    <br>Introduction to Basic Meditation
-                    </ul>
-                <button type="button" class="btn btn-sm btn-warning">
-                    <a href="index.html#jklogo">Back to Top</a>
-                </button>
-                <button type="button" class="btn btn-sm btn-warning">
-                    <a href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
-                </button>
-                <button button type="button" class="btn btn-sm btn-warning">
-                    <a href="googleform.html" target="blank">Contact Me</a>
-                </button>
+                <a class="btn btn-sm btn-warning" href="index.html#jklogo">Back to Top</a>
+                <a class="btn btn-sm btn-warning" href="jkdevpdf.pdf" download="portfolio">Download PDF</a>
+                <a class="btn btn-sm btn-warning" href="googleform.html" target="blank">Contact Me</a>
             </div>
         </div>
+    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
-     <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
