fixed errors - W3C validator

--- a/cognitive.html
+++ b/cognitive.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
         <ul class="nav justify-content-center navbar">
@@ -18,7 +18,7 @@
                 <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <img id="jklogo" src="images/jklogo.png" alt="JK logo"></img>
+                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Domains</a>
@@ -43,13 +43,13 @@
                 <p>My world revolves around STEM - Science, Technology, Engineering and Mathematics. I am curious about the way things works and I tinker from an early age. In recent years, I've come to realize that Mathematics is everywhere and in everything.</p>
                 <div class="row">
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker1.jpg" alt="I code games"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker1.jpg" alt="I code games">
                     </div>
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker2.jpg" alt="Hardware"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker2.jpg" alt="Hardware">
                     </div>
                      <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker3.jpg" alt="Hardware"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/tinker3.jpg" alt="Hardware">
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
             <div class="centra"></div>
             <div class="centra">
                 <a class="btn btn-light" href="https://scratch.mit.edu/users/tech6jamie/" target="_blank">
-                    <img class="icon" src="images/icons/scratchlogo.jpg">Projects</img>
+                    <img class="icon" src="images/icons/scratchlogo.jpg" alt="MIT Scratch">Projects
                 </a>
             </div>
         </nav>
@@ -84,12 +84,12 @@
                     <p>I can't remmeber when I started building or coding but I remember coding with paper blocks before moving into a series of scratch levels followed by scratch X in the lead up to Phyton Junior. Minecraft Mods forms part of my development in coding and interest in chemistry. I've gained so much from minecraft education that occasionally, I am unable to distinguish between gaming / playing and learning. This is my vulnerability and both my parents and I are in agreement to develop a healthier habit and tactics to manage my difficulty to unplug.
                 <div class="row">
                     <div class="col">
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code3.jpg" alt="I code games"></img>
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code1.jpg" alt="Hardware"></img>
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code2.jpg" alt="Software"></img>
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code3.jpg" alt="I code games">
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code1.jpg" alt="Hardware">
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/code2.jpg" alt="Software">
                     </div>
                     <div class="col">
-                        <video class="vids mx-auto d-block" width="300" controls alt="Project Ant">
+                        <video class="vids mx-auto d-block" width="300" controls>
                             <source src="videos/mblk.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -109,13 +109,13 @@
                     <p>My family believes in spending time playing games together. One of my favourite board game is Chess! It is a game steeped in mathematics! From geometric concepts and coordinates systems to solving mathematical problems. This is because the game is played on an eight-by-eight grid system; a total of 64squares. I am intrigued by the knights tour as well as game theory - a branch of mathematics!</p>
                 <div class="row">
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad">
                     </div>
                     <div class="col">
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess3.jpg" alt="Chess game with dad"></img>
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess3.jpg" alt="Chess game with dad">
                     </div>
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess">
                     </div>
                 </div>
             </div>
@@ -124,31 +124,31 @@
             <div class="row">
                 <div class="col">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
                     </a>
                 </div>
                 <div class="col">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
                     </a>
                 </div>
                 <div class="col">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK"></img>
+                        <img class="icon" src="images/jklogo.png" alt="I am JK">
                     </a>
                 </div>
                 <div class="col">
                     <a href="cognitive.html#coding">
-                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <img class="icon" src="images/icons/code.png" alt="Coding">
                     </a>
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <img class="icon" src="images/icons/violin.png" alt="Music">
                     </a>
                 </div>
             </div>
         </div>
+    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
-    <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
