--- a/physical.html
+++ b/physical.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link href="css/jkstyle.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
     </head>
     <body>
         <ul class="nav justify-content-center navbar">
@@ -19,7 +19,7 @@
                 <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <img id="jklogo" src="images/jklogo.png" alt="JK logo"></img>
+                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Domains</a>
@@ -44,37 +44,39 @@
                 <p>The ancient civilisation of Sparta practices the tradition where all children of Sparta are responsible to serve its government. For that purpose alone, a child of Sparta needs to be strong and a fast learner just to survive. The Spartan government prides strength, power and mental capability to bring their civilisation to new heights.</p>
                 <hr>
                 <h4>THE SPARTAN KIDS CODE</h4>
-                <ul>A Spartan thinks positively and is resilient through adversity</ul>
-                <ul>A Spartan helps others and asks for help when they need it</ul>
-                <ul>A Spartan understands that eating a healthy diet and exercising often keeps our bodies strong</ul>
-                <ul>A Spartan gets rest to help their bodies recover and grow</ul>
-                <ul>A Spartan understands their current abilities</ul>
-                <ul>A Spartan sets new goals to be the best that they can be</ul>
+                <ul>
+                    <li>A Spartan thinks positively and is resilient through adversity</li>
+                    <li>A Spartan helps others and asks for help when they need it</li>
+                    <li>A Spartan understands that eating a healthy diet and exercising often keeps our bodies strong</li>
+                    <li>A Spartan gets rest to help their bodies recover and grow</li>
+                    <li>A Spartan understands their current abilities</li>
+                    <li>A Spartan sets new goals to be the best that they can be</li>
+                </ul>
                 <hr>
             </div>
             <div class="container-fluid centra">
                 <div class="row">
                     <div class="col">    
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/ican.jpg" alt="I'll show you that I Can"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/ican.jpg" alt="I'll show you that I Can">
                     </div>
                     <div class="col">
-                        <video class="mx-auto d-block vids" width="320" controls alt="Junior Spartan Race">
+                        <video class="mx-auto d-block vids" width="320" controls>
                             <source src="videos/spartan.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/excel.jpg" alt="Excellence is an Attitude"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/excel.jpg" alt="Excellence is an Attitude">
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/sw5k.jpg" alt="Star Wars 5KM"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/sw5k.jpg" alt="Star Wars 5KM">
                     </div>
                     <div class="col">
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/physical/3spartan.jpg" alt="Spartan Kids"></img>
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/physical/3spartan.jpg" alt="Spartan Kids">
                     </div>
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/rc.jpg" alt="Spider Boy"></img>
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/rc.jpg" alt="Spider Boy">
                     </div>
                 </div>
             </div>
@@ -85,7 +87,7 @@
             </div>
             <div class="centra">
                 <a class="btn btn-light" href="https://www.strava.com/athletes/51155064" target="_blank">
-                    <img class="icon" src="images/icons/stravalogo.jpg">Workouts</img>
+                    <img class="icon" src="images/icons/stravalogo.jpg" alt="strava">Workouts
                 </a>
             </div>
         </nav>
@@ -103,36 +105,31 @@
             <div class="row">
                 <div class="col">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics"></img>
+                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
                     </a>
                 </div>
                 <div class="col">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"></img>
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
                     </a>
                 </div>
                 <div class="col">
                     <a href="index.html">
-                        <img class="icon" src="images/jklogo.png" alt="I am JK"></img>
+                        <img class="icon" src="images/jklogo.png" alt="I am JK">
                     </a>
                 </div>
                 <div class="col">
                     <a href="cognitive.html#coding">
-                        <img class="icon" src="images/icons/code.png" alt="Coding"></img>
+                        <img class="icon" src="images/icons/code.png" alt="Coding">
                     </a>
                 </div>
                 <div class="col">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music"></img>
+                        <img class="icon" src="images/icons/violin.png" alt="Music">
                     </a>
                 </div>
             </div>
         </div>
+    <footer class="intro footer"> Copyright &copy; 2020 JKDEV. All rights reserved.</footer>
     </body>
-    <footer class="intro footer"> Copyright &copy 2020 JKDEV. All rights reserved.</footer>
 </html>
-
-
-
-
-
