amended navbar, streamline domain

--- a/index.html
+++ b/index.html
@@ -13,36 +13,10 @@
     </head>
     <body>
         <nav class="nav justify-content-center navbar">
-            <img id="jklogo" src="images/jklogo.png" alt="JK logo">
+            <a href="index.html">
+                <img id="jklogo" src="images/jklogo.png" alt="JK logo">
+            </a>
         </nav>
-        <div class="container-fluid domain">
-            <div class="row">
-                <div class="col">
-                    <a href="cognitive.html">
-                        <img class="icon" src="images/icons/math.png" alt="Mathematics">
-                        <br>Olympian
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan">
-                        <br>Spartan
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="cognitive.html#coding">
-                        <img class="icon" src="images/icons/code.png" alt="Coding">
-                        <br>Coder
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Music">
-                        <br>Violinist
-                    </a>
-                </div>
-            </div>
-        </div>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
                 <h1 class="topper display-1">Who Am I?</h1>
@@ -52,8 +26,30 @@
                 </blockquote>
             </div>
         </div>
+        <div class="container-fluid domain">
+            <div class="row">
+                <div class="col" title="A SPARTAN">
+                    <a href="physical.html">
+                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan">
+                        <br>SPARTAN
+                    </a>
+                </div>
+                <div class="col" title="A LOGICIAN">
+                    <a href="cognitive.html">
+                        <img class="icon" src="images/icons/logician.png" alt="A Logician">
+                        <br>LOGICIAN
+                    </a>
+                </div>
+                <div class="col" title="A MUSICIAN">
+                    <a href="aesthetic.html">
+                        <img class="icon" src="images/icons/violin.png" alt="Musician">
+                        <br>MUSICIAN
+                    </a>
+                </div>
+            </div>
+        </div>
         <nav class="navbar">
-            <div class="centra">Accomplishments & Achievements</div>
+            <div class="centra">Accomplishments &amp; Achievements</div>
             <div class="centra"></div>
         </nav>
         <div class="container-fluid main">
